force-app/src/objects/ffr__XXXGLA__c.object
<CustomObject>
    <description>For internal use only.</description>
    <fields>
        <fullName>ffr__BalanceSheet1__c</fullName>
        <label>Balance Sheet 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__BalanceSheet2__c</fullName>
        <label>Balance Sheet 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ffr__BalanceSheet1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Current Assets</fullName>
                </value>
                <value>
                    <fullName>Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Intangible Assets</fullName>
                </value>
                <value>
                    <fullName>Current Liabilities</fullName>
                </value>
                <value>
                    <fullName>Long Term Liabilities</fullName>
                </value>
                <value>
                    <fullName>Shareholders Funds</fullName>
                </value>
                <value>
                    <fullName>Income Statement</fullName>
                </value>
                <value>
                    <fullName>Profit and Loss</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__BalanceSheet3__c</fullName>
        <label>Balance Sheet 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ffr__BalanceSheet2__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Bank and Cash</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>Provisions</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Prepayments and Accrued Income</fullName>
                </value>
                <value>
                    <fullName>Debtors</fullName>
                </value>
                <value>
                    <fullName>Stock</fullName>
                </value>
                <value>
                    <fullName>Fixtures Fittings and Equipment</fullName>
                </value>
                <value>
                    <fullName>Land and Buildings</fullName>
                </value>
                <value>
                    <fullName>Intangible Assets</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Accruals and Deferred Income</fullName>
                </value>
                <value>
                    <fullName>Employment Payables</fullName>
                </value>
                <value>
                    <fullName>Tax Liability</fullName>
                </value>
                <value>
                    <fullName>Creditors</fullName>
                </value>
                <value>
                    <fullName>Employment Creditors</fullName>
                </value>
                <value>
                    <fullName>Payable After 1 Year</fullName>
                </value>
                <value>
                    <fullName>Creditors Due After 1 Year</fullName>
                </value>
                <value>
                    <fullName>Capital and Reserves</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__TrialBalance1__c</fullName>
        <label>Trial Balance 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Profit and Loss</fullName>
                </value>
                <value>
                    <fullName>Income Statement</fullName>
                </value>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__TrialBalance2__c</fullName>
        <label>Trial Balance 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ffr__TrialBalance1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Gross Profit</fullName>
                </value>
                <value>
                    <fullName>Operating Expenses</fullName>
                </value>
                <value>
                    <fullName>Interest and Taxation</fullName>
                </value>
                <value>
                    <fullName>EBITDA</fullName>
                </value>
                <value>
                    <fullName>Depreciation and Amortization</fullName>
                </value>
                <value>
                    <fullName>Interest</fullName>
                </value>
                <value>
                    <fullName>Taxation</fullName>
                </value>
                <value>
                    <fullName>Current Assets</fullName>
                </value>
                <value>
                    <fullName>Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Intangible Assets</fullName>
                </value>
                <value>
                    <fullName>Current Liabilities</fullName>
                </value>
                <value>
                    <fullName>Long Term Liabilities</fullName>
                </value>
                <value>
                    <fullName>Shareholders Funds</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__TrialBalance3__c</fullName>
        <label>Trial Balance 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ffr__TrialBalance2__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Revenue</fullName>
                </value>
                <value>
                    <fullName>Cost of Sales</fullName>
                </value>
                <value>
                    <fullName>Administration Costs</fullName>
                </value>
                <value>
                    <fullName>Depreciation</fullName>
                </value>
                <value>
                    <fullName>Equipment Hire and Repairs</fullName>
                </value>
                <value>
                    <fullName>Marketing Expenses</fullName>
                </value>
                <value>
                    <fullName>Motor Expenses</fullName>
                </value>
                <value>
                    <fullName>Occupation Costs</fullName>
                </value>
                <value>
                    <fullName>Payroll Costs</fullName>
                </value>
                <value>
                    <fullName>Professional Fees</fullName>
                </value>
                <value>
                    <fullName>Staff Costs</fullName>
                </value>
                <value>
                    <fullName>Travel Expenses</fullName>
                </value>
                <value>
                    <fullName>Other Income and Expenses</fullName>
                </value>
                <value>
                    <fullName>Finance Costs</fullName>
                </value>
                <value>
                    <fullName>Taxation</fullName>
                </value>
                <value>
                    <fullName>Bank and Cash</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>Provisions</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Prepayments and Accrued Income</fullName>
                </value>
                <value>
                    <fullName>Debtors</fullName>
                </value>
                <value>
                    <fullName>Stock</fullName>
                </value>
                <value>
                    <fullName>Fixtures Fittings and Equipment</fullName>
                </value>
                <value>
                    <fullName>Land and Buildings</fullName>
                </value>
                <value>
                    <fullName>Intangible Assets</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Accruals and Deferred Income</fullName>
                </value>
                <value>
                    <fullName>Employment Payables</fullName>
                </value>
                <value>
                    <fullName>Tax Liability</fullName>
                </value>
                <value>
                    <fullName>Creditors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
                <value>
                    <fullName>Profit and Loss</fullName>
                </value>
                <value>
                    <fullName>Retained Earnings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>XXX General Ledger Account</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XXX General Ledger Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>